- added resampling and improve pt detection to ETL code.

--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,36 +56,13 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|                                                                                                                                                                                                                             | 0/6877 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  4%|████████▎                                                                                                                                                                                                        | 273/6877 [04:07<1:53:54,  1.03s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='A')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=False, parallel=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=True, parallel=True)"
    ]
   },
   {
@@ -109,7 +86,7 @@
     "data = FormatDataPhysionet2020(dataset='B')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=False, parallel=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=True, parallel=True)"
    ]
   },
   {
@@ -131,7 +108,7 @@
     "data = FormatDataPhysionet2020(dataset='C')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=False, parallel=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=True, parallel=True)"
    ]
   },
   {
@@ -153,7 +130,7 @@
     "data = FormatDataPhysionet2020(dataset='D')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=False, parallel=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=True, parallel=True)"
    ]
   },
   {
@@ -175,7 +152,7 @@
     "data = FormatDataPhysionet2020(dataset='E')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=False, parallel=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=True, parallel=True)"
    ]
   },
   {
@@ -197,7 +174,7 @@
     "data = FormatDataPhysionet2020(dataset='F')\n",
     "\n",
     "# Run format process\n",
-    "data.format(extract=False, debug=False, p_and_t_waves=False, parallel=False)"
+    "data.format(extract=False, debug=False, p_and_t_waves=True, parallel=True)"
    ]
   }
  ],
