- added resampling notebook for generating different training datasets.

--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,11 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='A')\n",
@@ -76,11 +84,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='B')\n",
@@ -100,9 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='C')\n",
@@ -122,9 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='D')\n",
@@ -144,9 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='E')\n",
@@ -166,9 +206,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formatting Physionet2020 dataset...\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='F')\n",
