--- a/kardioml/models/deepecg/notebooks/1_create_training_dataset.ipynb
+++ b/kardioml/models/deepecg/notebooks/1_create_training_dataset.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +49,179 @@
    "metadata": {},
    "source": [
     "# Split Physionet 2020 Training Data\n",
-    "## Create Training Lookup File\n",
-    "#### Tranche 1"
+    "## Create Training Lookup File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set sample frequencies\n",
+    "sample_frequencies = [250, 300, 350, 400, 450, 500]\n",
+    "\n",
+    "# Set datasets\n",
+    "datasets = ['A', 'B', 'C', 'D', 'E', 'F']\n",
+    "\n",
+    "# Loop through sample frequencies\n",
+    "for fs in sample_frequencies[0:1]:\n",
+    "    \n",
+    "    # Create directory for formatted data\n",
+    "    os.makedirs(os.path.join(DATA_PATH, 'training', str(fs)), exist_ok=True)\n",
+    "    \n",
+    "    # Create list\n",
+    "    lookup = list()\n",
+    "    \n",
+    "    # Loop through datasets\n",
+    "    for dataset in datasets:\n",
+    "        \n",
+    "        # Get filenames\n",
+    "        filenames = [filename.split('.')[0] for filename in os.listdir(os.path.join(DATA_PATH, dataset, str(fs))) \n",
+    "                     if 'json' in filename]\n",
+    "        \n",
+    "        # Loop through filenames\n",
+    "        for filename in filenames:\n",
+    "\n",
+    "            # Import meta data\n",
+    "            meta_data = json.load(open(os.path.join(DATA_PATH, dataset, str(fs), '{}.json'.format(filename))))\n",
+    "            \n",
+    "            # Save label\n",
+    "            if meta_data['labels_training']:\n",
+    "                lookup.append({'filename': filename, 'labels': meta_data['labels_training'], 'dataset': dataset, 'fs': fs,\n",
+    "                               'labels_merged': meta_data['labels_training_merged'], \n",
+    "                               'path': os.path.join(DATA_PATH, dataset, str(fs))})\n",
+    "                \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>fs</th>\n",
+       "      <th>labels_merged</th>\n",
+       "      <th>path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A0001</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>A</td>\n",
+       "      <td>250</td>\n",
+       "      <td>[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A0002</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>A</td>\n",
+       "      <td>250</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A0003</td>\n",
+       "      <td>[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>A</td>\n",
+       "      <td>250</td>\n",
+       "      <td>[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A0004</td>\n",
+       "      <td>[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>A</td>\n",
+       "      <td>250</td>\n",
+       "      <td>[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A0006</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>A</td>\n",
+       "      <td>250</td>\n",
+       "      <td>[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  filename                                             labels dataset   fs  \\\n",
+       "0    A0001  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       A  250   \n",
+       "1    A0002  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       A  250   \n",
+       "2    A0003  [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       A  250   \n",
+       "3    A0004  [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       A  250   \n",
+       "4    A0006  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       A  250   \n",
+       "\n",
+       "                                       labels_merged  \\\n",
+       "0  [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "1  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "2  [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "3  [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "4  [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "\n",
+       "                                                path  \n",
+       "0  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...  \n",
+       "1  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...  \n",
+       "2  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...  \n",
+       "3  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...  \n",
+       "4  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lookup = pd.DataFrame(lookup)\n",
+    "lookup.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### A"
    ]
   },
   {
@@ -60,7 +231,7 @@
    "outputs": [],
    "source": [
     "# Get meta data files\n",
-    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, 'physionet_2020_1', 'formatted')) \n",
+    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, 'A', 'formatted')) \n",
     "             if 'json' in file]\n",
     "\n",
     "# Get label for each file\n",
@@ -156,33 +327,6 @@
     "   \n",
     "# Lookup file\n",
     "training_lookup = {'train': data.loc[train_index, 'path'].tolist(), 'val': data.loc[val_index, 'path'].tolist()}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Add Augmentation Datasets\n",
-    "## Zheng 2020"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get file paths\n",
-    "paths = [os.path.join(DATA_PATH, 'zheng_2020', 'formatted', file.split('.')[0]) \n",
-    "         for file in os.listdir(os.path.join(DATA_PATH, 'zheng_2020', 'formatted')) if 'json' in file]\n",
-    "\n",
-    "# Add to lookup dictionary\n",
-    "# training_lookup['train'].extend(paths)\n",
-    "# random.shuffle(training_lookup['train'])\n",
-    "# random.shuffle(training_lookup['train'])\n",
-    "# random.shuffle(training_lookup['train'])\n",
-    "# random.shuffle(training_lookup['train'])\n",
-    "# random.shuffle(training_lookup['train'])"
    ]
   },
   {
