- added notebook for splitting train/val datasets.

--- a/kardioml/models/deepecg/notebooks/1_create_training_dataset.ipynb
+++ b/kardioml/models/deepecg/notebooks/1_create_training_dataset.ipynb
@@ -54,55 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set sample frequencies\n",
-    "sample_frequencies = [250, 300, 350, 400, 450, 500]\n",
-    "\n",
-    "# Set datasets\n",
-    "datasets = ['A', 'B', 'C', 'D', 'E', 'F']\n",
-    "\n",
-    "# Loop through sample frequencies\n",
-    "for fs in sample_frequencies[0:1]:\n",
-    "    \n",
-    "    # Create directory for formatted data\n",
-    "    os.makedirs(os.path.join(DATA_PATH, 'training', str(fs)), exist_ok=True)\n",
-    "    \n",
-    "    # Create list\n",
-    "    lookup = list()\n",
-    "    \n",
-    "    # Loop through datasets\n",
-    "    for dataset in datasets:\n",
-    "        \n",
-    "        # Get filenames\n",
-    "        filenames = [filename.split('.')[0] for filename in os.listdir(os.path.join(DATA_PATH, dataset, str(fs))) \n",
-    "                     if 'json' in filename]\n",
-    "        \n",
-    "        # Loop through filenames\n",
-    "        for filename in filenames:\n",
-    "\n",
-    "            # Import meta data\n",
-    "            meta_data = json.load(open(os.path.join(DATA_PATH, dataset, str(fs), '{}.json'.format(filename))))\n",
-    "            \n",
-    "            # Save label\n",
-    "            if meta_data['labels_training']:\n",
-    "                lookup.append({'filename': filename, 'labels': meta_data['labels_training'], 'dataset': dataset, 'fs': fs,\n",
-    "                               'labels_merged': meta_data['labels_training_merged'], \n",
-    "                               'path': os.path.join(DATA_PATH, dataset, str(fs))})\n",
-    "                \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "        \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -207,145 +159,75 @@
        "4  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lookup = pd.DataFrame(lookup)\n",
-    "lookup.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get meta data files\n",
-    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, 'A', 'formatted')) \n",
-    "             if 'json' in file]\n",
+    "# Set sample frequencies\n",
+    "sample_frequencies = [250, 300, 350, 400, 450, 500]\n",
     "\n",
-    "# Get label for each file\n",
-    "data_1 = {'filename': [], 'labels': []}\n",
-    "for filename in filenames:\n",
-    "    meta_data = json.load(open(os.path.join(DATA_PATH, 'physionet_2020_1', 'formatted', '{}.json'.format(filename))))\n",
-    "    if meta_data['labels']:\n",
-    "        data_1['filename'].append(filename)\n",
-    "        data_1['labels'].append(meta_data['label_train'])\n",
+    "# Set datasets\n",
+    "datasets = ['A', 'B', 'C', 'D', 'E', 'F']\n",
     "\n",
-    "# Combine\n",
-    "data_1 = pd.DataFrame(data_1)\n",
+    "# Create list\n",
+    "data = list()\n",
     "\n",
-    "# Add path\n",
-    "data_1['path'] = data_1['filename'].map(lambda filename: os.path.join(DATA_PATH, 'physionet_2020_1', 'formatted', filename))\n",
+    "# Loop through sample frequencies\n",
+    "for fs in sample_frequencies:\n",
+    "    \n",
+    "    # Loop through datasets\n",
+    "    for dataset in datasets:\n",
+    "        \n",
+    "        # Get filenames\n",
+    "        filenames = [filename.split('.')[0] for filename in os.listdir(os.path.join(DATA_PATH, dataset, str(fs))) \n",
+    "                     if 'json' in filename]\n",
+    "        \n",
+    "        # Loop through filenames\n",
+    "        for filename in filenames:\n",
     "\n",
-    "# View DataFrame\n",
-    "data_1.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Tranche 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get meta data files\n",
-    "filenames = [file.split('.')[0] for file in os.listdir(os.path.join(DATA_PATH, 'physionet_2020_2', 'formatted')) \n",
-    "             if 'json' in file]\n",
-    "\n",
-    "# Get label for each file\n",
-    "data_2 = {'filename': [], 'labels': []}\n",
-    "for filename in filenames:\n",
-    "    meta_data = json.load(open(os.path.join(DATA_PATH, 'physionet_2020_2', 'formatted', '{}.json'.format(filename))))\n",
-    "    if meta_data['labels']:\n",
-    "        data_2['filename'].append(filename)\n",
-    "        data_2['labels'].append(meta_data['label_train'])\n",
-    "\n",
-    "# Combine\n",
-    "data_2 = pd.DataFrame(data_2)\n",
-    "\n",
-    "# Add path\n",
-    "data_2['path'] = data_2['filename'].map(lambda filename: os.path.join(DATA_PATH, 'physionet_2020_2', 'formatted', filename))\n",
+    "            # Import meta data\n",
+    "            meta_data = json.load(open(os.path.join(DATA_PATH, dataset, str(fs), '{}.json'.format(filename))))\n",
+    "            \n",
+    "            # Save label\n",
+    "            if meta_data['labels_training']:\n",
+    "                data.append({'filename': filename, 'labels': meta_data['labels_training'], 'dataset': dataset, 'fs': fs,\n",
+    "                             'labels_merged': meta_data['labels_training_merged'], \n",
+    "                             'path': os.path.join(DATA_PATH, dataset, str(fs), filename)})\n",
+    "                \n",
+    "# Create DataFrame\n",
+    "data = pd.DataFrame(data)\n",
     "\n",
     "# View DataFrame\n",
-    "data_2.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Combine Tranche 1 and 2"
+    "data.head()            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Merge\n",
-    "data = pd.concat([data_1, data_2], ignore_index=True, axis=0).reset_index(drop=True)\n",
+    "# Loop through sample frequencies\n",
+    "for fs in sample_frequencies:\n",
+    "    \n",
+    "    # Filter by sample frequency\n",
+    "    df = data[data['fs'] == fs].reset_index()\n",
+    "    \n",
+    "    # Split dataset into train/evaluate\n",
+    "    rmskf = MultilabelStratifiedKFold(n_splits=2, random_state=0)\n",
+    "    for cv_fold, (train_index, val_index) in enumerate(rmskf.split(np.stack(df['labels_merged'].values), \n",
+    "                                                                   np.stack(df['labels_merged'].values))):\n",
+    "        pass\n",
     "\n",
-    "# View DataFrame\n",
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Split Data "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split dataset into train/evaluate\n",
-    "rmskf = MultilabelStratifiedKFold(n_splits=5, random_state=0)\n",
-    "for train_index, val_index in rmskf.split(np.stack(data['labels'].values), np.stack(data['labels'].values)):\n",
-    "    pass\n",
-    "   \n",
-    "# Lookup file\n",
-    "training_lookup = {'train': data.loc[train_index, 'path'].tolist(), 'val': data.loc[val_index, 'path'].tolist()}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Save Lookup JSON"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save file\n",
-    "os.makedirs(os.path.join(DATA_PATH, 'deepecg'), exist_ok=True)\n",
-    "with open(os.path.join(DATA_PATH, 'deepecg', 'training_lookup.json'), 'w') as file:\n",
-    "    json.dump(training_lookup, file, sort_keys=True)"
+    "    # Lookup file\n",
+    "    training_lookup = {'train': df.loc[train_index, 'path'].tolist(), 'val': df.loc[val_index, 'path'].tolist()}\n",
+    "    \n",
+    "    # Save file\n",
+    "    os.makedirs(os.path.join(DATA_PATH, 'training', 'deepecg', 'single_split', str(fs)), exist_ok=True)\n",
+    "    with open(os.path.join(DATA_PATH, 'training', 'deepecg', 'single_split', str(fs), 'training_lookup.json'), 'w') as file:\n",
+    "        json.dump(training_lookup, file, sort_keys=False, indent=4)"
    ]
   }
  ],
