- deepecg debug - cross-validation splitting code

--- a/kardioml/models/deepecg/notebooks/1_create_training_dataset.ipynb
+++ b/kardioml/models/deepecg/notebooks/1_create_training_dataset.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,49 +88,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>A0001</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>A</td>\n",
-       "      <td>250</td>\n",
+       "      <td>350</td>\n",
        "      <td>[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>A0002</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>A</td>\n",
-       "      <td>250</td>\n",
+       "      <td>350</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>A0003</td>\n",
        "      <td>[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>A</td>\n",
-       "      <td>250</td>\n",
+       "      <td>350</td>\n",
        "      <td>[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>A0004</td>\n",
        "      <td>[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>A</td>\n",
-       "      <td>250</td>\n",
+       "      <td>350</td>\n",
        "      <td>[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>A0006</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>A</td>\n",
-       "      <td>250</td>\n",
+       "      <td>350</td>\n",
        "      <td>[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>C:\\Users\\sebig\\Documents\\Code\\physionet-challe...</td>\n",
+       "      <td>C:\\Users\\sebastian goodfellow\\Documents\\code\\p...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -138,11 +138,11 @@
       ],
       "text/plain": [
        "  filename                                             labels dataset   fs  \\\n",
-       "0    A0001  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       A  250   \n",
-       "1    A0002  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       A  250   \n",
-       "2    A0003  [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       A  250   \n",
-       "3    A0004  [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       A  250   \n",
-       "4    A0006  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       A  250   \n",
+       "0    A0001  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       A  350   \n",
+       "1    A0002  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       A  350   \n",
+       "2    A0003  [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       A  350   \n",
+       "3    A0004  [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       A  350   \n",
+       "4    A0006  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       A  350   \n",
        "\n",
        "                                       labels_merged  \\\n",
        "0  [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
@@ -152,24 +152,24 @@
        "4  [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
        "\n",
        "                                                path  \n",
-       "0  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...  \n",
-       "1  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...  \n",
-       "2  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...  \n",
-       "3  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...  \n",
-       "4  C:\\Users\\sebig\\Documents\\Code\\physionet-challe...  "
+       "0  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "1  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "2  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "3  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  \n",
+       "4  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Set sample frequencies\n",
-    "sample_frequencies = [250, 300, 350, 400, 450, 500]\n",
+    "sample_frequencies = [350]\n",
     "\n",
     "# Set datasets\n",
-    "datasets = ['A', 'B', 'C', 'D', 'E', 'F']\n",
+    "datasets = ['A']\n",
     "\n",
     "# Create list\n",
     "data = list()\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
