--- a/kardioml/models/deepecg/notebooks/3_train_model_test.ipynb
+++ b/kardioml/models/deepecg/notebooks/3_train_model_test.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
     "from kardioml.models.deepecg.utils.devices.device_check import print_device_counts\n",
     "from kardioml.models.deepecg.train.train import train\n",
     "from kardioml.models.deepecg.model.model import Model\n",
-    "from kardioml import DATA_PATH, OUTPUT_PATH, LABELS_COUNT, ECG_LEADS, FS\n",
+    "from kardioml import DATA_PATH, OUTPUT_PATH, LABELS_COUNT, NUM_LEADS\n",
     "\n",
     "# Configure Notebook\n",
     "import warnings\n",
@@ -52,68 +52,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Workstation has 1 CPUs.\n",
-      "Workstation has 2 GPUs.\n",
-      "input | shape = (?, 30000, 12)\n",
-      "stem_layer_1 | shape = (?, 15000, 128)\n",
-      "stem_layer_2 | shape = (?, 7500, 128)\n",
-      "res_layer_1_res | shape = (?, 7500, 128)\n",
-      "res_layer_1_skip | shape = (?, 7500, 128)\n",
-      "res_layer_1_res | shape = (?, 7500, 128)\n",
-      "res_layer_1_skip | shape = (?, 7500, 128)\n",
-      "output_skip_addition | shape = (?, 7500, 128)\n",
-      "output_conv1 | shape = (?, 7500, 256)\n",
-      "output_conv2 | shape = (?, 7500, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n",
-      "input | shape = (?, 30000, 12)\n",
-      "stem_layer_1 | shape = (?, 15000, 128)\n",
-      "stem_layer_2 | shape = (?, 7500, 128)\n",
-      "res_layer_1_res | shape = (?, 7500, 128)\n",
-      "res_layer_1_skip | shape = (?, 7500, 128)\n",
-      "res_layer_1_res | shape = (?, 7500, 128)\n",
-      "res_layer_1_skip | shape = (?, 7500, 128)\n",
-      "output_skip_addition | shape = (?, 7500, 128)\n",
-      "output_conv1 | shape = (?, 7500, 256)\n",
-      "output_conv2 | shape = (?, 7500, 512)\n",
-      "gap | shape = (?, 512)\n",
-      "logits | shape = (?, 9)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Set data path\n",
-    "data_path = os.path.join(DATA_PATH, 'formatted')\n",
-    "\n",
-    "# Set data path\n",
-    "lookup_path = os.path.join(DATA_PATH, 'deepecg')\n",
-    "\n",
     "# Print devices\n",
     "print_device_counts()\n",
     "\n",
     "# Set save path for graphs, summaries, and checkpoints\n",
     "os.makedirs(OUTPUT_PATH, exist_ok=True)\n",
     "\n",
+    "# Set sample length (seconds)\n",
+    "duration = 60\n",
+    "\n",
     "# Set model name\n",
-    "model_name = '14'\n",
+    "model_name = '1'\n",
     "\n",
     "# Maximum number of checkpoints to keep\n",
     "max_to_keep = 1\n",
     "\n",
     "# Set randome states\n",
-    "seed = 0                                                         \n",
+    "seed = 0                  \n",
+    "\n",
+    "# Set sample frequency\n",
+    "fs = 350\n",
+    "\n",
+    "# Set data path\n",
+    "lookup_path = os.path.join(DATA_PATH, 'training', 'deepecg', 'single_split', str(fs))\n",
     "\n",
     "# Get training dataset dimensions\n",
-    "length, channels = (30000, len(ECG_LEADS))     \n",
+    "length, channels = (int(duration * fs), NUM_LEADS)          \n",
     "\n",
     "# Number of classes\n",
     "classes = LABELS_COUNT\n",
@@ -122,9 +92,9 @@
     "network_name = 'DeepECGV1'\n",
     "\n",
     "# Set hyper-parameter\n",
-    "hyper_params = {'num_res_layers': 2, 'drop_rate': 0.3, 'kernel_size': 3, \n",
-    "                'conv_filts': 128, 'res_filts': 128, 'skip_filts': 128, \n",
-    "                'dilation': True, 'fs': FS}\n",
+    "hyper_params = {'num_res_layers': 8, 'drop_rate': 0.3, 'kernel_size': 3, \n",
+    "                'conv_filts': 64, 'res_filts': 64, 'skip_filts': 64, \n",
+    "                'dilation': True, 'fs': fs}\n",
     "\n",
     "# Set network inputs\n",
     "network_parameters = {'length': length, 'channels': channels, 'classes': classes, 'seed': seed,\n",
@@ -135,7 +105,6 @@
     "              network_name=network_name, \n",
     "              network_parameters=network_parameters, \n",
     "              save_path=OUTPUT_PATH,\n",
-    "              data_path=data_path,\n",
     "              lookup_path=lookup_path,\n",
     "              max_to_keep=max_to_keep)"
    ]
@@ -149,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -163,6 +132,13 @@
     "# Train model\n",
     "train(model=model, epochs=epochs, batch_size=batch_size)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -181,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
