--- a/kardioml/models/deepecg/notebooks/0_resampling.ipynb
+++ b/kardioml/models/deepecg/notebooks/0_resampling.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,10 +69,11 @@
     "    # Import waveform\n",
     "    waveform = np.load(os.path.join(path, 'formatted', '{}.npy'.format(filename)))\n",
     "    \n",
-    "    # Resample\n",
-    "    samples = int(waveform.shape[0] * fs / meta_data['fs_resampled'])\n",
+    "    # Rescale\n",
+    "    waveform = scale_waveforms(waveform=waveform, rpeaks=meta_data['rpeaks'])\n",
     "\n",
     "    # Resample waveform\n",
+    "    samples = int(waveform.shape[0] * fs / meta_data['fs_resampled'])\n",
     "    waveform = signal.resample(x=waveform, num=samples, axis=0)\n",
     "    \n",
     "    # Save meta data\n",
@@ -80,20 +81,28 @@
     "        json.dump(meta_data, file, sort_keys=False, indent=4)\n",
     "\n",
     "    # Save waveform data npy file\n",
-    "    np.save(os.path.join(path, str(fs), '{}.npy'.format(filename)), waveform)"
+    "    np.save(os.path.join(path, str(fs), '{}.npy'.format(filename)), waveform)\n",
+    "    \n",
+    "def scale_waveforms(waveform, rpeaks):\n",
+    "    \"\"\"Get rpeaks for each channel and scale waveform amplitude by median rpeak amplitude of lead I.\"\"\"\n",
+    "    if rpeaks:\n",
+    "        for rpeak_array in rpeaks:\n",
+    "            if rpeak_array:\n",
+    "                return waveform / np.median(waveform[rpeaks[0], 0])\n",
+    "    return (waveforms - waveform.mean()) / waveform.std()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set sample frequencies\n",
-    "sample_frequencies = [250, 300, 350, 400, 450, 500]\n",
+    "sample_frequencies = [350]\n",
     "\n",
     "# Set datasets\n",
-    "datasets = ['A', 'B', 'C', 'D', 'E', 'F']\n",
+    "datasets = ['A']\n",
     "\n",
     "# Loop through sample frequencies\n",
     "for fs in sample_frequencies:\n",
@@ -118,6 +127,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
