- deepecg debug - cross-validation splitting code

--- a/kardioml/models/deepecg/notebooks/0_resampling.ipynb
+++ b/kardioml/models/deepecg/notebooks/0_resampling.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,12 +89,12 @@
     "        for rpeak_array in rpeaks:\n",
     "            if rpeak_array:\n",
     "                return waveform / np.median(waveform[rpeaks[0], 0])\n",
-    "    return (waveforms - waveform.mean()) / waveform.std()"
+    "    return (waveform - waveform.mean()) / waveform.std()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
     "sample_frequencies = [350]\n",
     "\n",
     "# Set datasets\n",
-    "datasets = ['A']\n",
+    "datasets = ['A', 'B', 'D', 'E', 'F']\n",
     "\n",
     "# Loop through sample frequencies\n",
     "for fs in sample_frequencies:\n",
@@ -111,7 +111,8 @@
     "    for dataset in datasets:\n",
     "        \n",
     "        # Get filenames\n",
-    "        filenames = [filename.split('.')[0] for filename in os.listdir(os.path.join(DATA_PATH, dataset, 'formatted')) if 'json' in filename]\n",
+    "        filenames = [filename.split('.')[0] for filename in os.listdir(os.path.join(DATA_PATH, dataset, \n",
+    "                                                                                    'formatted')) if 'json' in filename]\n",
     "        \n",
     "        # Create directory for formatted data\n",
     "        os.makedirs(os.path.join(DATA_PATH, dataset, str(fs)), exist_ok=True)\n",
