--- a/kardioml/models/deepecg/notebooks/1_create_training_dataset.ipynb
+++ b/kardioml/models/deepecg/notebooks/1_create_training_dataset.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "4  C:\\Users\\sebastian goodfellow\\Documents\\code\\p...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
     "sample_frequencies = [350]\n",
     "\n",
     "# Set datasets\n",
-    "datasets = ['A']\n",
+    "datasets = ['A', 'B', 'D', 'E', 'F']\n",
     "\n",
     "# Create list\n",
     "data = list()\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
