added appjar into req txt

--- a/notebooks/EDA_E.ipynb
+++ b/notebooks/EDA_E.ipynb
@@ -4786,9 +4786,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit ('tf_gpu': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37764bittfgpuconda65e251bb915b4afb913cb977bb5f684e"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
